src/plugins/PlcConnector/cell-win/lib/libcell.h

	typedef unsigned char byte;
	__EXPORT extern int js_connect(char *hostname, int device_number_cpu);
	__EXPORT extern void js_disconnect();
	__EXPORT extern int js_read_tag_8(char *tagname, char *value);
	__EXPORT extern int js_read_tag_16(char *tagname, short *value);
	__EXPORT extern int js_read_tag_32(char *tagname, int *value);
	
	__EXPORT extern int js_write_tag_32(char *tagname, int value);
	__EXPORT extern int js_write_tag_16(char *tagname, short value);
	__EXPORT extern int js_write_tag_8(char *tagname, char value);
	__EXPORT extern int js_write_tag_array_32(char *tagname, int* values, int count);
	__EXPORT extern void setDPrintCallback(char *);
	__EXPORT extern void setDebugLevel(int level);